[package]
name = "bitwarden-secrets"
version = "0.2.0"
description = "A simple command line tool to manage Bitwarden secrets"
edition = "2021"
license = "Unlicense"
exclude = [
    ".bw-secrets.json",
]

[dependencies]
rpassword = "7.3"
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
zeroize = "1.8"

[[bin]]
name = "bw-secrets"
path = "src/main.rs"
